--- a/packages/theme/docs/imt/Palette.mdx
+++ b/packages/theme/docs/imt/Palette.mdx
@@ -1,6 +1,6 @@
 {/* Palette.mdx */}
 
-import { ColorItem, ColorPalette, Meta } from "@storybook/blocks";
+import { ColorItem, ColorPalette, Meta, Title } from "@storybook/blocks";
 import { imtMuiTheme } from "../../src/themes";
 
 <Meta title="Themes/IMT/Palette" />
@@ -12,58 +12,58 @@ import { imtMuiTheme } from "../../src/themes";
     title="Primary"
     subtitle="theme.palette.primary"
     colors={{
-      darker: imtMuiTheme.palette.primary.darker,
-      dark: imtMuiTheme.palette.primary.dark,
-      main: imtMuiTheme.palette.primary.main,
-      light: imtMuiTheme.palette.primary.light,
       lighter: imtMuiTheme.palette.primary.lighter,
+      light: imtMuiTheme.palette.primary.light,
+      main: imtMuiTheme.palette.primary.main,
+      dark: imtMuiTheme.palette.primary.dark,
+      darker: imtMuiTheme.palette.primary.darker,
     }}
   />
   <ColorItem
     title="Secondary"
     subtitle="theme.palette.secondary"
     colors={{
-      darker: imtMuiTheme.palette.secondary.darker,
-      dark: imtMuiTheme.palette.secondary.dark,
-      main: imtMuiTheme.palette.secondary.main,
-      light: imtMuiTheme.palette.secondary.light,
       lighter: imtMuiTheme.palette.secondary.lighter,
+      light: imtMuiTheme.palette.secondary.light,
+      main: imtMuiTheme.palette.secondary.main,
+      dark: imtMuiTheme.palette.secondary.dark,
+      darker: imtMuiTheme.palette.secondary.darker,
     }}
   />
   <ColorItem
     title="Error"
     subtitle="theme.palette.error"
     colors={{
-      dark: imtMuiTheme.palette.error.dark,
-      main: imtMuiTheme.palette.error.main,
       light: imtMuiTheme.palette.error.light,
+      main: imtMuiTheme.palette.error.main,
+      dark: imtMuiTheme.palette.error.dark,
     }}
   />
   <ColorItem
     title="Warning"
     subtitle="theme.palette.warning"
     colors={{
-      dark: imtMuiTheme.palette.warning.dark,
-      main: imtMuiTheme.palette.warning.main,
       light: imtMuiTheme.palette.warning.light,
+      main: imtMuiTheme.palette.warning.main,
+      dark: imtMuiTheme.palette.warning.dark,
     }}
   />
   <ColorItem
     title="Info"
     subtitle="theme.palette.info"
     colors={{
-      dark: imtMuiTheme.palette.info.dark,
-      main: imtMuiTheme.palette.info.main,
       light: imtMuiTheme.palette.info.light,
+      main: imtMuiTheme.palette.info.main,
+      dark: imtMuiTheme.palette.info.dark,
     }}
   />
   <ColorItem
     title="Success"
     subtitle="theme.palette.success"
     colors={{
-      dark: imtMuiTheme.palette.success.dark,
-      main: imtMuiTheme.palette.success.main,
       light: imtMuiTheme.palette.success.light,
+      main: imtMuiTheme.palette.success.main,
+      dark: imtMuiTheme.palette.success.dark,
     }}
   />
   <ColorItem
